--- a/configs/flower17_mobilenetV2_config.json
+++ b/configs/flower17_mobilenetV2_config.json
@@ -1,27 +1,27 @@
 {
   "exp": {
-    "name": "PlantCLEF2015_efficientNet"
+    "name": "flower17_mobilenetV2"
   },
   "data_loader": {
     "name": "image_generator_data_loader.ImageGeneratorDataloader",
-    "train_data_path": "dataset/PlantCLEF2015/train",
-    "validation_data_path": "dataset/PlantCLEF2015/validation",
-    "test_data_path": "dataset/PlantCLEF2015/test"
+    "train_data_path": "dataset/17_flowers/train",
+    "validation_data_path": "dataset/17_flowers/validation",
+    "test_data_path": "dataset/17_flowers/test"
   },
   "model":{
-  	"name": "efficientnet_model.Efficientnet_model",
+  	"name": "mobilenetV2_model.MobileNetV2_model",
   	"pretrained_weights_file": "",
     "learning_rate": 0.001,
-    "optimizer": "rmsprop",
-    "classes_num": 1000
+    "optimizer": "adam",
+    "classes_num": 17
   },
   "trainer":{
-    "num_epochs": 20,
-    "batch_size": 56,
+    "num_epochs": 1,
+    "batch_size": 72,
     "validation_split":0.25,
     "dim":224,
-    "num_training_img": 91758, 
-    "num_val_img": 21446, 
+    "num_training_img": 1190, 
+    "num_val_img": 170, 
     "verbose_training": true
   },
   "evaluater":{
