--- a/configs/flower17_efficientnet_config.json
+++ b/configs/flower17_efficientnet_config.json
@@ -5,18 +5,17 @@
   "data_loader": {
     "name": "image_generator_data_loader.ImageGeneratorDataloader",
     "train_data_path": "dataset/17_flowers/train",
-    "validation_data_path": "dataset/17_flowers/validation",
-    "test_data_path": "dataset/17_flowers/test"
+    "validation_data_path": "dataset/17_flowers/validation"
   },
   "model":{
-  	"name": "efficientnet_model.Efficientnet_model",
-  	"pretrained_weights_file": "",
+    "name": "efficientnet_model.Efficientnet_model",
+    "pretrained_weights_file": "",
     "learning_rate": 0.001,
     "optimizer": "adam",
     "classes_num": 17
   },
   "trainer":{
-    "num_epochs": 1,
+    "num_epochs": 20,
     "batch_size": 56,
     "validation_split":0.25,
     "dim":224,
@@ -25,7 +24,7 @@
     "verbose_training": true
   },
   "evaluater":{
-  	"weights_path": ""
+    "weights_path": ""
   },
   "callbacks":{
     "checkpoint_monitor": "val_loss",
@@ -36,7 +35,7 @@
     "tensorboard_write_graph": true
   },
   "comet":{
-  	"api_key":"0s3GVqlRjkA3Z28Nr1vY8jb1Z",
+    "api_key":"0s3GVqlRjkA3Z28Nr1vY8jb1Z",
     "workspace":"teresachr"
-  } 
+  }
 }
