--- a/configs/flower102_inceptionV3_config.json
+++ b/configs/flower102_inceptionV3_config.json
@@ -1,30 +1,30 @@
 {
   "exp": {
-    "name": "flower17_efficientnet"
+    "name": "flower102_inceptionV3"
   },
   "data_loader": {
     "name": "image_generator_data_loader.ImageGeneratorDataloader",
-    "train_data_path": "dataset/17_flowers/train",
-    "validation_data_path": "dataset/17_flowers/validation"
+    "train_data_path": "dataset/102_flowers/train",
+    "validation_data_path": "dataset/102_flowers/validation"
   },
   "model":{
-    "name": "efficientnet_model.Efficientnet_model",
+    "name": "inceptionv3_model.Inceptionv3_model",
     "pretrained_weights_file": "",
     "learning_rate": 0.001,
     "optimizer": "adam",
-    "classes_num": 17
+    "classes_num": 102
   },
   "trainer":{
     "num_epochs": 20,
     "batch_size": 56,
     "validation_split":0.25,
     "dim":224,
-    "num_training_img": 1190, 
-    "num_val_img": 170, 
+    "num_training_img": 6182, 
+    "num_val_img": 2009, 
     "verbose_training": true
   },
   "evaluater":{
-    "weights_path": "/home/stephen/Projects/Plants/experiments/2019-07-14/flower17_efficientnet/checkpoints/flower17_efficientnet-18-0.06.hdf5"
+    "weights_path": ""
   },
   "callbacks":{
     "checkpoint_monitor": "val_loss",
