--- a/configs/flower17_inceptionV3_config.json
+++ b/configs/flower17_inceptionV3_config.json
@@ -1,6 +1,6 @@
 {
   "exp": {
-    "name": "flower17_efficientnet"
+    "name": "flower17_Inceptionv3_model"
   },
   "data_loader": {
     "name": "image_generator_data_loader.ImageGeneratorDataloader",
@@ -8,7 +8,7 @@
     "validation_data_path": "dataset/17_flowers/validation"
   },
   "model":{
-    "name": "efficientnet_model.Efficientnet_model",
+    "name": "inceptionv3_model.Inceptionv3_model",
     "pretrained_weights_file": "",
     "learning_rate": 0.001,
     "optimizer": "adam",
@@ -24,7 +24,7 @@
     "verbose_training": true
   },
   "evaluater":{
-    "weights_path": "/home/stephen/Projects/Plants/experiments/2019-07-14/flower17_efficientnet/checkpoints/flower17_efficientnet-18-0.06.hdf5"
+    "weights_path": "/home/stephen/Projects/Plants/experiments/2019-07-14/flower17_Inceptionv3_model/checkpoints/flower17_Inceptionv3_model-07-1.02.hdf5"
   },
   "callbacks":{
     "checkpoint_monitor": "val_loss",
